2008-01-19  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2007-03-21  Richard Sandiford  <richard@codesourcery.com>
	 
	* gcc.target/i386/pr21291.c: Require nonpic or ! ilp32.

2008-01-17  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/compile/20080114-1.c: Use empty asm statements.

2008-01-14  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/compile/20080114-1.c: New test.

2008-01-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c-torture/execute/builtins/chk.h: Don't check !__PIE__.
	Also check __pic__.
	* lib/target-supports.exp (check_effective_target_nonpic): Likewise.
	* gcc.dg/assign-warn-3.c: Use "static inline" instead of "inline".
	
	Backport:
	
	2007-03-21  Richard Sandiford  <richard@codesourcery.com>
	* gcc.c-torture/execute/builtins/chk.h (LOCAL): Define.
	* gcc.c-torture/execute/builtins/sprintf-chk.c (s1): Make LOCAL.
	* gcc.c-torture/execute/builtins/stpcpy-chk.c (s1): Likewise.
	* gcc.c-torture/execute/builtins/strcpy-chk.c (s1): Likewise.

	2007-07-26  Nathan Froyd  <froydnj@codesourcery.com>
	PR/19232
	* gcc.dg/assign-warn-3.c (f0): Declare as inline.
	(f1): Likewise.

	2007-01-15  Dale Johannesen  <dalej@apple.com>
	* gcc.dg/tree-ssa/loop-3.c:  Disable with -fpic or -fPIC.
	
	2007-03-21  Richard Sandiford  <richard@codesourcery.com>
	* lib/target-supports.exp (check_effective_target_nonpic): New
	procedure.

2007-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/34003
	* gcc.dg/pr34003-1.c: New test.
	* gcc.dg/pr34003-2.c: New.

2007-12-19  Richard Sandiford  <rsandifo@nildram.co.uk>

	PR rtl-optimization/34456
	* gcc.c-torture/execute/pr34456.c: New test.

2007-11-29  Matthias Klose  <doko@ubuntu.com>

	Backport from mainline:
	2007-11-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/34130
	* gcc.c-torture/execute/pr34130.c: New testcase.

2007-11-16  Richard Guenther  <rguenther@suse.de>

	PR middle-end/34030
	* gcc.c-torture/compile/pr34030.c: New testcase.
