@@ -5,8 +5,9 @@
 // But br.call returns to the start of the next bundlem so during
 // unwinding the call was considered to be outside of the EH region
 // while it should have been inside.
-// { dg-options "-O2" }
 // { dg-do run }
+// { dg-require-weak "" }
+// { dg-options "-O2" }
 
 struct A {};
 struct B { virtual ~B(); };
