@@ -1,6 +1,6 @@
 // PR target/29487
-// { dg-require-weak "" }
 // { dg-do run { xfail "hppa*-hp-hpux11.*" } }
+// { dg-require-weak "" }
 // { dg-additional-sources "weak1-a.cc" }
 // { dg-options "-O2" }
 
